--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "internship1",
   "version": "0.1.0",
+  "Homepage" : "http://demo.appsoftindia.in/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
