--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "internship1",
   "version": "0.1.0",
-  "Homepage" : "http://demo.appsoftindia.in/",
+  "Homepage": "http://demo.appsoftindia.in/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
@@ -11,6 +11,7 @@
     "popper.js": "^1.16.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
